[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/CameraRig.tscn" type="PackedScene" id=1]
[ext_resource path="res://textures/terrain/material/mat_terrain_water_grid.tres" type="Material" id=2]
[ext_resource path="res://scenes/SceneDefaultEnvironment.tres" type="Environment" id=3]
[ext_resource path="res://tests/ConditionZoo.gd" type="Script" id=4]
[ext_resource path="res://tests/test_assets/KinematicPawn.tscn" type="PackedScene" id=5]
[ext_resource path="res://tests/test_assets/TaskingCowardPawn.tscn" type="PackedScene" id=6]
[ext_resource path="res://tests/test_gui_core/TimeGUI.tscn" type="PackedScene" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 20, 1, 20 )

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 40, 40 )

[sub_resource type="NavigationMesh" id=3]
vertices = PoolVector3Array( -19.5, 0.5, -19.5, -19.5, 0.5, 19.5, 19.5, 0.5, 19.5, 19.5, 0.5, -19.5 )
polygons = [ PoolIntArray( 3, 2, 0 ), PoolIntArray( 0, 2, 1 ) ]
geometry/parsed_geometry_type = 1
geometry/collision_mask = 4293918723
geometry/source_geometry_mode = 1
geometry/source_group_name = "terrain"
cell/size = 0.1
cell/height = 0.25
agent/height = 0.81
agent/radius = 0.5
agent/max_climb = 0.5
edge/max_length = 0.0

[node name="ConditionZoo" type="Spatial"]
script = ExtResource( 4 )

[node name="CameraRig" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 64, 64, 64 )
basic_move_rate = 50.0
camera_size = 18
max_camera_size = 20
min_camera_size = 12
zoom_step = 2
move_clamping_extents = Vector2( 15, 15 )

[node name="CoreCamera" parent="CameraRig" index="2"]
size = 18.0

[node name="Camera" parent="CameraRig/XrayWorld" index="0"]
transform = Transform( 0.707107, -0.408244, 0.577353, 0, 0.816501, 0.577344, -0.707107, -0.408244, 0.577353, 64, 64, 64 )
size = 18.0

[node name="Camera" parent="CameraRig/SilhouetteWorld" index="0"]
transform = Transform( 0.707107, -0.408244, 0.577353, 0, 0.816501, 0.577344, -0.707107, -0.408244, 0.577353, 64, 64, 64 )
size = 18.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 3 )

[node name="Floor" type="StaticBody" parent="." groups=["terrain"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
collision_layer = 3
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 2 )

[node name="Navigation" type="Navigation" parent="."]

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]
navmesh = SubResource( 3 )

[node name="ControlGUI" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 138.0
margin_bottom = 100.0

[node name="ItemList" type="ItemList" parent="ControlGUI"]
margin_right = 172.0
margin_bottom = 100.0
rect_min_size = Vector2( 160, 100 )
select_mode = 1
allow_reselect = true
allow_rmb_select = true

[node name="ClearMode" type="CheckBox" parent="ControlGUI"]
margin_top = 104.0
margin_right = 172.0
margin_bottom = 128.0
text = "Clear Conditions Mode"

[node name="HBoxContainer" type="HBoxContainer" parent="ControlGUI"]
margin_top = 132.0
margin_right = 172.0
margin_bottom = 132.0

[node name="InstructionsLabel" type="Label" parent="ControlGUI"]
margin_top = 136.0
margin_right = 172.0
margin_bottom = 150.0
text = "Click to inflict!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeGUI" parent="." instance=ExtResource( 7 )]

[node name="WanderingPawn" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0 )
navigation = NodePath("../Navigation")

[node name="CirclingPawn" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1.3, 0 )
navigation = NodePath("../Navigation")
draw_projected_movement = true

[connection signal="input_event" from="WanderingPawn" to="." method="_on_WanderingPawn_input_event"]
[connection signal="pawn_died" from="WanderingPawn" to="." method="_on_WanderingPawn_pawn_died"]
[connection signal="input_event" from="CirclingPawn" to="." method="_on_CirclingPawn_input_event"]
[connection signal="path_complete" from="CirclingPawn" to="." method="_on_CirclingPawn_path_complete"]
[connection signal="pawn_died" from="CirclingPawn" to="." method="_on_CirclingPawn_pawn_died"]

[editable path="CameraRig"]
